<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp">

        <ImageView
            android:id="@+id/personDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person_male_1" />

        <TextView
            android:id="@+id/PersonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="Hello, ASEP"
            android:textSize="20dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/mainDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_1" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp">

        <TextView
            android:layout_width="56dp"
            android:layout_height="25dp"
            android:text="@string/Store"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/locationShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cihampelas"
            android:layout_marginLeft="180dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationString"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationString2"
            android:layout_marginLeft="120dp"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/locationPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_pin_1"
            android:layout_marginStart="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="#D52F2F"
        android:text="@string/buttonID2"
        app:cornerRadius="0dp"
        app:strokeColor="#F9B916"
        app:strokeWidth="1dp"/>
</LinearLayout>
