<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page1">

    <ImageView
        android:id="@+id/pizacat"
        android:layout_width="195dp"
        android:layout_height="235dp"
        android:layout_marginLeft="100px"
        android:layout_marginTop="55px"
        app:layout_constraintBottom_toTopOf="@+id/spinnertext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rm_pizza_1" />

    <TextView
        android:id="@+id/spinnertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/spinnertext"
        android:textColor="#733F0E"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizacat" />

    <Spinner
        android:id="@+id/spinnertextid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#F24448"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/spinnertext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:entries="@array/city_array" />



    <TextView
        android:id="@+id/nameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="56dp"
        android:text="@string/nameId"
        android:textColor="#703A0E"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnertextid" />

    <EditText
        android:id="@+id/address_text"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/enter_address_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameId" />

    <Button
        android:id="@+id/buttonID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#D52F2F"
        android:text="@string/buttonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_text"
        app:cornerRadius="0dp"
        app:strokeWidth="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>


